Fix mapbox not showing correctly by adding LEAFLET CSS

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -332,4 +332,9 @@ footer img {
   margin: 0 auto;
 }
 
+.mapbox {
+  width: 100%;
+  height: 50em;
+}
+
 /*# sourceMappingURL=style.css.map */
